<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_note"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="ru.mhenro.notes.NoteActivity"
    android:paddingEnd="0dp"
    android:paddingStart="0dp"
    android:padding="0dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/tbEdit"
            android:layout_weight="0" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/tvHeader"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:textSize="14sp"
                android:text="@string/noteTitle"
                android:paddingLeft="5dp"
                android:textColor="#000000" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etHeader"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/noteTitleEmpty" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_weight="0">

            <CheckBox
                android:text="@string/chkNotify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chkNotify"
                android:layout_weight="0"
                android:layout_gravity="center_vertical" />

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/dpDateNotify"
                android:layout_weight="1"
                android:headerBackground="@android:color/white"
                style="@android:style/Widget.DatePicker" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/etNote"
            android:layout_weight="2"
            android:gravity="top|left|center_vertical"
            android:layout_gravity="top|left"
            android:hint="@string/noteBodyEmpty" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:id="@+id/layout_admob2"
            android:layout_height="56dp">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adViewNote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/notes_banner_view">
            </com.google.android.gms.ads.AdView>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
